--- a/src/componentes/Botao/botao.css
+++ b/src/componentes/Botao/botao.css
@@ -1,15 +1,20 @@
-.botao{
-    
+.botao {
+
     width: 167px;
-    height: 80px; 
+    height: 80px;
     color: white;
     background-color: #6278F7;
     border: none;
     border-radius: 10px;
     font-family: 'montserrat';
     font-size: 1em;
+    font-weight: 700;
 
-    margin-top: 15px;
 
+    margin-top: 25px;
+    cursor: pointer;
 
+}
+.botao:hover{
+    color:#95ffd4;
 }
