--- a/src/componentes/Formulario/formulario.css
+++ b/src/componentes/Formulario/formulario.css
@@ -12,22 +12,27 @@
 }
 
 .formulario form {
-    padding: 36px 64px;
+    
+    padding: 66px 64px;
     max-width: 80%;
     background: #F7F7F7;
     box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.08);
     border-radius: 20px;
+    
+    
 }
 
 .formulario h2 {
     font-size: 32px;
     font-weight: 400;
+    
 }
 
 .formulario div {
     display: flex;
     justify-content: center;
     max-width: 80%;
+    flex-direction:column
     
 }
 .formulario div h2{
