--- a/src/componentes/ListaSuspensa/ListaSuspensa.css
+++ b/src/componentes/ListaSuspensa/ListaSuspensa.css
@@ -1,17 +1,11 @@
-
-.campo-texto{
-
-    margin: 24px 0;
-
-
-}
-.campo-texto label{
+.Lista-suspensa label{
     display: block;
     margin-bottom: 8px;
     font-size: 24px;
     font-weight: bold;
 }
-.campo-texto input{
+
+.Lista-suspensa select{
     background-color: white;
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.08);
     width: 98%;
